translated, need to fix some css and spacing

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ a:hover {
 }
 
 .bio {
-  margin-top: 60px;
+  margin-top: 1em;
   font-weight: 300;
   font-size: 1em;
   line-height: 1.6em;
